...

    <TextView
        android:id="@+id/tvSolution"
        android:layout_width="match_parent"
        android:layout_height="6dp"
...

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/btnNine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/btnFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnOne"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnTwo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnZero"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnThree"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnDot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnPlus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnMinus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/btnEquals"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
